Add README and swagger
