# src/models/character.js
@@ -14,7 +14,7 @@ class CharacterModel {
     
     async getCharactersByAccountID(accountID) {
         try {
-            const {rows} = await this.db.query('SELECT * FROM ' + this.config.tableName + ' WHERE accountID = $1', [accountID]);
+            const {rows} = await this.db.query('SELECT * FROM ' + this.config.tableName + ' WHERE account_id = $1', [accountID]);
             return rows;
         } catch (err) {
             throw err;
@@ -23,7 +23,7 @@ class CharacterModel {
     
     async getCharacterByCharacterID(characterID) {
         try {
-            const {rows} = await this.db.query('SELECT * FROM ' + this.config.tableName + ' WHERE characterID = $1', [characterID]);
+            const {rows} = await this.db.query('SELECT * FROM ' + this.config.tableName + ' WHERE character_id = $1', [characterID]);
             return rows[0];
         } catch (err) {
             throw err;
@@ -32,7 +32,7 @@ class CharacterModel {
     
     async createCharacter(accountID, name, xp) {
         try {
-            const {rows} = await this.db.query('INSERT INTO ' + this.config.tableName + '(characterID, accountID, name, xp) ' +
+            const {rows} = await this.db.query('INSERT INTO ' + this.config.tableName + '(character_id, account_id, name, xp) ' +
                 'values(default, $1, $2, $3) RETURNING *',
                 [accountID, name, xp]
             );
@@ -44,7 +44,7 @@ class CharacterModel {
     
     async deleteCharacter(accountID) {
         try {
-            const {rows} = await this.db.query('DELETE FROM ' + this.config.tableName + ' WHERE characterID = $1 RETURNING *', [accountID]);
+            const {rows} = await this.db.query('DELETE FROM ' + this.config.tableName + ' WHERE character_id = $1 RETURNING *', [accountID]);
             return rows[0];
         } catch (err) {
             throw err;
@@ -53,7 +53,7 @@ class CharacterModel {
     
     async deleteAllCharactersByAccountID(accountID) {
         try {
-            const {rows} = await this.db.query('DELETE FROM ' + this.config.tableName + ' WHERE accountID = $1 RETURNING *', [accountID]);
+            const {rows} = await this.db.query('DELETE FROM ' + this.config.tableName + ' WHERE account_id = $1 RETURNING *', [accountID]);
             return rows;
         } catch (err) {
             throw err;
